--- a/construction_matrices.ipynb
+++ b/construction_matrices.ipynb
@@ -13,11 +13,10 @@
     "    \"\"\"\n",
     "    N_nodes = len(nodes)\n",
     "    matrix_durations = np.zeros((N_nodes,N_nodes))\n",
-    "    liste_itineraires = np.zeros((N_nodes,N_nodes))\n",
-    "\n",
+    "    liste_itineraires = []\n",
     "    i = 0 \n",
     "    for node_start in nodes : \n",
-    "        liste_itineraires.append([]\n",
+    "        liste_itineraires.append([])\n",
     "        start_x = nodes[node_start][1] \n",
     "        start_y = nodes[node_start][0]\n",
     "        print(f'i = {i}')\n",
@@ -36,14 +35,13 @@
     "                    element[0] = element[1]\n",
     "                    element[1] = p \n",
     "            itineraire_points = change(itineraire,  0.00025, 0.0002, 0.000225)\n",
-    "\n",
     "            #il va maintenant falloir modifier cela en liste de noeuds. \n",
     "            itineraire_noeuds = []\n",
     "            for point in itineraire_points :\n",
     "                for node in nodes : \n",
     "                    if node not in itineraire_noeuds and dist(point, nodes[node]) <= 0.00045 : \n",
     "                        itineraire_noeuds.append(node)\n",
-    "            liste_itineraires[i,j] = itineraire_noeuds  #Donc liste_itineraires[i][j] c'est l'itineraire pour aller de i vers j en parlant en noeud. \n",
+    "            liste_itineraires[i].append(itineraire_noeuds) #Donc liste_itineraires[i][j] c'est l'itineraire pour aller de i vers j en parlant en noeud\n",
     "            j+=1\n",
     "        i+=1 \n",
     "    return liste_itineraires, matrix_durations"
