--- a/Routes.ipynb
+++ b/Routes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "77b8359a",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4cb31a18",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "1a075e9b",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "94becb44",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "id": "c2e5b302",
    "metadata": {},
    "outputs": [
@@ -113,29 +113,42 @@
     "    \"14\" : [48.846773, 2.343323]\n",
     "        }\n",
     "\n",
-    "matrix = toolbox.construction_matrices(nodes)"
+    "liste_itineraire = toolbox.construction_matrices(nodes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "id": "ed58d15f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3', '4', '3', '2', '1']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "itineraire = {1: ['Source', '2', 'Sink'],\n",
-    " 2: ['Source', '31', 'Sink'],\n",
+    " 2: ['Source', '11', 'Sink'],\n",
     " 3: ['Source', '1', 'Sink'],\n",
-    " 4: ['Source', '23', '11', '12', '16', 'Sink'],\n",
-    " 5: ['Source', '14', '15', '6', '38', 'Sink'],\n",
-    " 6: ['Source', '34', '33', 'Sink'],\n",
-    " 7: ['Source', '40', '32', 'Sink'],\n",
-    " 8: ['Source', '8', '30', '5', 'Sink']}"
+    " 4: ['Source', '13', '5', '6', '10', 'Sink'],\n",
+    " 5: ['Source', '1', '4', '10', '11', 'Sink'],\n",
+    " 6: ['Source', '3', '6', 'Sink'],\n",
+    " 7: ['Source', '9', '12', 'Sink'],\n",
+    " 8: ['Source', '8', '3', '5', 'Sink']}\n",
+    "\n",
+    "liste_itineraire[0][3][1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "id": "2e426a7c",
    "metadata": {},
    "outputs": [],
@@ -144,45 +157,102 @@
     "    for iti in itineraire :\n",
     "        liste_noeuds = itineraire[iti]\n",
     "        for i in range (len(liste_noeuds) - 1) :\n",
-    "            if liste_noeuds[i] == \"Source\" or liste_noeuds[i] == \"Sink\":\n",
-    "                chemin = matrix[0][ eval(liste_noeuds[i+1])]\n",
+    "            if liste_noeuds[i] == \"Source\" :\n",
+    "                chemin = liste_itineraire[0][0][eval(liste_noeuds[i+1])]\n",
+    "            elif liste_noeuds[i+1] == \"Sink\":\n",
+    "                chemin = liste_itineraire[0][eval(liste_noeuds[i])][0]\n",
     "            else : \n",
-    "                if liste_noeuds[i+1] == \"Source\" or liste_noeuds[i+1] == \"Sink\":\n",
-    "                    chemin = matrix[eval(liste_noeuds[i])][0]\n",
-    "                else : \n",
-    "                    chemin = matrix[eval(liste_noeuds[i])][eval(liste_noeuds[i+1])]\n",
+    "                chemin = liste_itineraire[0][eval(liste_noeuds[i])][eval(liste_noeuds[i+1])]\n",
     "            for j in range(len(chemin)): \n",
     "                for k in range(len(chemin[j]) - 1):\n",
+    "                    # print(\"j, k\", chemin[j][k], chemin[j][k+1])\n",
     "                    if (chemin[j][k], chemin[j][k+1]) not in Quartier.routes :\n",
     "                        Quartier.routes.append((chemin[j][k], chemin[j][k+1]))\n",
     "                        Route(chemin[j][k], chemin[j][k+1])\n",
     "                    else : \n",
-    "                        Route(chemin[i], chemin[i+1]).traffic += 1\n",
+    "                        Route(chemin[j][k], chemin[j][k+1]).traffic += 1\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 93,
+   "id": "0ab2ad16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# definir_routes(itineraire)\n",
+    "# Quartier.routes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "7fc486d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrice_routes(itineraire, nodes):\n",
+    "    matrice_routes = [[0 for i in range(len(nodes))] for j in range(len(nodes))]\n",
+    "    for iti in itineraire :\n",
+    "        liste_noeuds = itineraire[iti]\n",
+    "        for i in range (len(liste_noeuds) - 1) :\n",
+    "            if liste_noeuds[i] == \"Source\" :\n",
+    "                chemin = liste_itineraire[0][0][eval(liste_noeuds[i+1])]\n",
+    "            elif liste_noeuds[i+1] == \"Sink\":\n",
+    "                chemin = liste_itineraire[0][eval(liste_noeuds[i])][0]\n",
+    "            else : \n",
+    "                chemin = liste_itineraire[0][eval(liste_noeuds[i])][eval(liste_noeuds[i+1])]\n",
+    "            for j in range(len(chemin)-1): \n",
+    "                if matrice_routes[eval(chemin[j])][eval(chemin[j+1])] == 0 :\n",
+    "                    matrice_routes[eval(chemin[j])][eval(chemin[j+1])] = Route(chemin[j], chemin[j+1])\n",
+    "                else : \n",
+    "                    matrice_routes[eval(chemin[j])][eval(chemin[j+1])].traffic += 1\n",
+    "    return matrice_routes\n",
+    "\n",
+    "def routes_to_un(matrice):\n",
+    "    mat = np.zeros((len(matrice), len(matrice[0])))\n",
+    "    for i in range(len(matrice)):\n",
+    "        for j in range(len(matrice[0])):\n",
+    "            if matrice[i][j] != 0 :\n",
+    "                mat[i][j] = 1\n",
+    "    return mat\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "id": "f07a4235",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29748/3846916477.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdefinir_routes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitineraire\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mQuartier\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mroutes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29748/2808443964.py\u001b[0m in \u001b[0;36mdefinir_routes\u001b[1;34m(itineraire)\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[1;32melse\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mliste_noeuds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"Source\"\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mliste_noeuds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"Sink\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m                     \u001b[0mchemin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mliste_noeuds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m                 \u001b[1;32melse\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m                     \u001b[0mchemin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mliste_noeuds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mliste_noeuds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 1., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 1., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0., 1., 0., 0., 1., 0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 0., 0., 1., 1., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 1., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 1., 0., 1.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "definir_routes(itineraire)\n",
-    "Quartier.routes"
+    "matrice_routes(itineraire, nodes)\n",
+    "routes_to_un(matrice_routes(itineraire, nodes))"
    ]
   }
  ],
