--- a/construction_matrices.ipynb
+++ b/construction_matrices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,11 +109,11 @@
     "    \"\"\"\n",
     "    N_nodes = len(nodes)\n",
     "    matrix_durations = np.zeros((N_nodes,N_nodes))\n",
-    "    liste_itineraires = np.zeros((N_nodes,N_nodes))\n",
+    "    liste_itineraires = []\n",
     "\n",
     "    i = 0 \n",
-    "    for node_start in nodes : \n",
-    "        liste_itineraires.append([]\n",
+    "    for node_start in nodes :\n",
+    "        liste_itineraires.append([])\n",
     "        start_x = nodes[node_start][1] \n",
     "        start_y = nodes[node_start][0]\n",
     "        print(f'i = {i}')\n",
@@ -139,7 +139,7 @@
     "                for node in nodes : \n",
     "                    if node not in itineraire_noeuds and dist(point, nodes[node]) <= 0.00045 : \n",
     "                        itineraire_noeuds.append(node)\n",
-    "            liste_itineraires[i,j] = itineraire_noeuds  #Donc liste_itineraires[i][j] c'est l'itineraire pour aller de i vers j en parlant en noeud. \n",
+    "            liste_itineraires[i].append(itineraire_noeuds)  #Donc liste_itineraires[i][j] c'est l'itineraire pour aller de i vers j en parlant en noeud. \n",
     "            j+=1\n",
     "        i+=1 \n",
     "    return liste_itineraires, matrix_durations"
@@ -147,28 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i =  0\n",
-      "i =  1\n",
-      "i =  2\n",
-      "i =  3\n",
-      "i =  4\n",
-      "i =  5\n",
-      "i =  6\n",
-      "i =  7\n",
-      "i =  8\n",
-      "i =  9\n",
-      "i =  10\n",
-      "i =  11\n",
-      "i =  12\n",
-      "i =  13\n",
-      "i =  14\n"
+      "i = 0\n",
+      "i = 1\n",
+      "i = 2\n",
+      "i = 3\n",
+      "i = 4\n",
+      "i = 5\n",
+      "i = 6\n",
+      "i = 7\n",
+      "i = 8\n",
+      "i = 9\n",
+      "i = 10\n",
+      "i = 11\n",
+      "i = 12\n",
+      "i = 13\n",
+      "i = 14\n"
      ]
     }
    ],
@@ -191,399 +191,29 @@
     "    \"14\" : [48.846818141299046, 2.3433405220004384]\n",
     "        }\n",
     "\n",
-    "matrix = construction_matrices(nodes)"
+    "liste_itineraire = construction_matrices(nodes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[['0'],\n",
-       "  ['0', '5', '11', '6', '3', '2', '1'],\n",
-       "  ['0', '5', '11', '6', '3', '2'],\n",
-       "  ['0', '5', '11', '6', '3'],\n",
-       "  ['0', '5', '11', '6', '3', '4', '3', '4'],\n",
-       "  ['0', '5'],\n",
-       "  ['0', '5', '11', '6'],\n",
-       "  ['0', '5', '11', '6', '3', '4', '3', '4', '7'],\n",
-       "  ['0', '5', '11', '12', '13', '9', '13', '9', '8'],\n",
-       "  ['0', '5', '11', '12', '13', '9', '13', '9'],\n",
-       "  ['0', '5', '11', '12', '13', '14', '13', '14', '10'],\n",
-       "  ['0', '5', '11'],\n",
-       "  ['0', '5', '11', '12'],\n",
-       "  ['0', '5', '11', '12', '13'],\n",
-       "  ['0', '5', '11', '14']],\n",
-       " [['1', '0'],\n",
-       "  ['1'],\n",
-       "  ['1', '0', '5', '11', '6', '3', '2'],\n",
-       "  ['1', '0', '5', '11', '6', '3'],\n",
-       "  ['1', '0', '5', '11', '6', '3', '4', '3', '4'],\n",
-       "  ['1', '0', '5'],\n",
-       "  ['1', '0', '5', '11', '6'],\n",
-       "  ['1', '0', '5', '11', '6', '3', '4', '3', '4', '7'],\n",
-       "  ['1', '0', '5', '11', '12', '13', '9', '13', '9', '8'],\n",
-       "  ['1', '0', '5', '11', '12', '13', '9', '13', '9'],\n",
-       "  ['1', '0', '5', '11', '12', '13', '14', '13', '14', '10'],\n",
-       "  ['1', '0', '5', '11'],\n",
-       "  ['1', '0', '5', '11', '12'],\n",
-       "  ['1', '0', '5', '11', '12', '13'],\n",
-       "  ['1', '0', '5', '11', '14']],\n",
-       " [['2', '3', '2', '1', '0'],\n",
-       "  ['2', '3', '2', '1'],\n",
-       "  ['2'],\n",
-       "  ['2', '3'],\n",
-       "  ['2', '3', '4'],\n",
-       "  ['2', '3', '6', '11', '5'],\n",
-       "  ['2', '3', '6'],\n",
-       "  ['2', '3', '4', '7'],\n",
-       "  ['2', '3', '4', '7', '10', '7', '10', '9', '10', '9', '8'],\n",
-       "  ['2',\n",
-       "   '3',\n",
-       "   '4',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '9',\n",
-       "   '13',\n",
-       "   '9',\n",
-       "   '13'],\n",
-       "  ['2', '3', '4', '7', '10', '7', '10', '14', '10'],\n",
-       "  ['2', '3', '6', '11'],\n",
-       "  ['2', '3', '6', '8', '12', '8', '12'],\n",
-       "  ['2', '3', '4', '7', '10', '7', '10', '14', '13', '14', '13', '14'],\n",
-       "  ['2', '3', '4', '7', '10', '7', '10', '14']],\n",
-       " [['3',\n",
-       "   '4',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '12',\n",
-       "   '11',\n",
-       "   '5',\n",
-       "   '0'],\n",
-       "  ['3', '4', '7', '6', '3', '2', '1'],\n",
-       "  ['3', '4', '7', '6', '3', '2'],\n",
-       "  ['3'],\n",
-       "  ['3', '4'],\n",
-       "  ['3',\n",
-       "   '4',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '12',\n",
-       "   '11',\n",
-       "   '5'],\n",
-       "  ['3', '4', '7', '6'],\n",
-       "  ['3', '4', '7'],\n",
-       "  ['3', '4', '7', '10', '7', '10', '9', '10', '9', '10', '9', '8'],\n",
-       "  ['3',\n",
-       "   '4',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '9',\n",
-       "   '13',\n",
-       "   '9',\n",
-       "   '13'],\n",
-       "  ['3', '4', '7', '10', '7', '10', '14', '10'],\n",
-       "  ['3',\n",
-       "   '4',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '12',\n",
-       "   '11'],\n",
-       "  ['3', '4', '7', '10', '7', '10', '14', '13', '14', '13', '14', '13', '12'],\n",
-       "  ['3', '4', '7', '10', '7', '10', '14', '13', '14', '13', '14'],\n",
-       "  ['3', '4', '7', '10', '7', '10', '14']],\n",
-       " [['4', '7', '10', '7', '10', '14', '13', '14', '13', '12', '11', '5', '0'],\n",
-       "  ['4', '7', '6', '3', '2', '1'],\n",
-       "  ['4', '7', '6', '3', '2'],\n",
-       "  ['4', '7', '6', '3'],\n",
-       "  ['4'],\n",
-       "  ['4', '7', '10', '7', '10', '14', '13', '14', '13', '12', '11', '5'],\n",
-       "  ['4', '7', '6'],\n",
-       "  ['4', '7'],\n",
-       "  ['4', '7', '10', '7', '10', '9', '10', '9', '10', '9', '8'],\n",
-       "  ['4', '7', '10', '7', '10', '14', '13', '14', '13', '9', '13', '9', '13'],\n",
-       "  ['4', '7', '10', '7', '10', '14', '10'],\n",
-       "  ['4', '7', '10', '7', '10', '14', '13', '14', '13', '12', '11'],\n",
-       "  ['4', '7', '10', '7', '10', '14', '13', '14', '13', '12'],\n",
-       "  ['4', '7', '10', '7', '10', '14', '13', '14', '13'],\n",
-       "  ['4', '7', '10', '7', '10', '14']],\n",
-       " [['5', '0'],\n",
-       "  ['5', '11', '6', '3', '2', '1'],\n",
-       "  ['5', '11', '6', '3', '2'],\n",
-       "  ['5', '11', '6', '3'],\n",
-       "  ['5', '11', '6', '3', '4', '3', '4'],\n",
-       "  ['5'],\n",
-       "  ['5', '11', '6'],\n",
-       "  ['5', '11', '6', '3', '4', '3', '4', '7'],\n",
-       "  ['5', '11', '12', '13', '9', '13', '9', '8'],\n",
-       "  ['5', '11', '12', '13', '9', '13', '9'],\n",
-       "  ['5', '11', '12', '13', '14', '13', '14', '10'],\n",
-       "  ['5', '11'],\n",
-       "  ['5', '11', '12'],\n",
-       "  ['5', '11', '12', '13'],\n",
-       "  ['5', '11', '14']],\n",
-       " [['6', '11', '5', '0'],\n",
-       "  ['6', '3', '2', '1'],\n",
-       "  ['6', '3', '2'],\n",
-       "  ['6', '3'],\n",
-       "  ['6', '3', '4', '3', '4'],\n",
-       "  ['6', '11', '5'],\n",
-       "  ['6'],\n",
-       "  ['6', '3', '4', '3', '4', '7'],\n",
-       "  ['6', '8', '12', '13', '9', '13', '9', '8'],\n",
-       "  ['6', '8', '12', '13', '9', '13', '9'],\n",
-       "  ['6', '8', '12', '13', '14', '13', '14', '10'],\n",
-       "  ['6', '11'],\n",
-       "  ['6', '8', '12'],\n",
-       "  ['6', '8', '12', '13'],\n",
-       "  ['6', '11', '14']],\n",
-       " [['7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '12',\n",
-       "   '11',\n",
-       "   '5',\n",
-       "   '0'],\n",
-       "  ['7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '12',\n",
-       "   '11',\n",
-       "   '6',\n",
-       "   '3',\n",
-       "   '2',\n",
-       "   '1'],\n",
-       "  ['7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '12',\n",
-       "   '11',\n",
-       "   '6',\n",
-       "   '3',\n",
-       "   '2'],\n",
-       "  ['7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '12',\n",
-       "   '11',\n",
-       "   '6',\n",
-       "   '3'],\n",
-       "  ['7',\n",
-       "   '10',\n",
-       "   '7',\n",
-       "   '10',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '14',\n",
-       "   '13',\n",
-       "   '12',\n",
-       "   '11',\n",
-       "   '6',\n",
-       "   '3',\n",
-       "   '4'],\n",
-       "  ['7', '10', '7', '10', '14', '13', '14', '13', '14', '13', '12', '11', '5'],\n",
-       "  ['7', '10', '7', '10', '14', '13', '14', '13', '14', '13', '12', '11', '6'],\n",
-       "  ['7'],\n",
-       "  ['7', '10', '7', '10', '9', '10', '9', '8'],\n",
-       "  ['7', '10', '7', '10', '14', '13', '14', '13', '14', '9', '13', '9', '13'],\n",
-       "  ['7', '10', '7', '10', '14', '10'],\n",
-       "  ['7', '10', '7', '10', '14', '13', '14', '13', '14', '13', '12', '11'],\n",
-       "  ['7', '10', '7', '10', '14', '13', '14', '13', '14', '13', '12'],\n",
-       "  ['7', '10', '7', '10', '14', '13', '14', '13', '14'],\n",
-       "  ['7', '10', '7', '10', '14']],\n",
-       " [['8', '12', '11', '5', '0'],\n",
-       "  ['8', '12', '11', '6', '3', '2', '1'],\n",
-       "  ['8', '12', '11', '6', '3', '2'],\n",
-       "  ['8', '12', '11', '6', '3'],\n",
-       "  ['8', '12', '11', '6', '3', '4', '3', '4'],\n",
-       "  ['8', '12', '11', '5'],\n",
-       "  ['8', '12', '11', '6'],\n",
-       "  ['8', '12', '11', '6', '3', '4', '3', '4', '7'],\n",
-       "  ['8'],\n",
-       "  ['8', '12', '13', '9', '13', '9'],\n",
-       "  ['8', '12', '13', '14', '13', '14', '10'],\n",
-       "  ['8', '12', '11'],\n",
-       "  ['8', '12'],\n",
-       "  ['8', '12', '13'],\n",
-       "  ['8', '12', '14']],\n",
-       " [['9', '8', '12', '11', '5', '0'],\n",
-       "  ['9', '8', '12', '11', '6', '3', '2', '1'],\n",
-       "  ['9', '8', '12', '11', '6', '3', '2'],\n",
-       "  ['9', '8', '12', '11', '6', '3'],\n",
-       "  ['9', '8', '12', '11', '6', '3', '4', '3', '4'],\n",
-       "  ['9', '8', '12', '11', '5'],\n",
-       "  ['9', '8', '12', '11', '6'],\n",
-       "  ['9', '8', '12', '11', '6', '3', '4', '3', '4', '7'],\n",
-       "  ['9', '8'],\n",
-       "  ['9'],\n",
-       "  ['9', '8', '12', '13', '14', '13', '14', '10'],\n",
-       "  ['9', '8', '12', '11'],\n",
-       "  ['9', '8', '12'],\n",
-       "  ['9', '8', '12', '13'],\n",
-       "  ['9', '8', '12', '14']],\n",
-       " [['10', '14', '13', '14', '13', '12', '11', '5', '0'],\n",
-       "  ['10', '14', '13', '14', '13', '12', '11', '6', '3', '2', '1'],\n",
-       "  ['10', '14', '13', '14', '13', '12', '11', '6', '3', '2'],\n",
-       "  ['10', '14', '13', '14', '13', '12', '11', '6', '3'],\n",
-       "  ['10', '14', '13', '14', '13', '12', '11', '6', '3', '4'],\n",
-       "  ['10', '14', '13', '14', '13', '12', '11', '5'],\n",
-       "  ['10', '14', '13', '14', '13', '12', '11', '6'],\n",
-       "  ['10', '14', '13', '14', '13', '12', '11', '6', '3', '4', '7'],\n",
-       "  ['10', '9', '10', '9', '8'],\n",
-       "  ['10', '14', '13', '14', '13', '9', '13', '9', '13'],\n",
-       "  ['10'],\n",
-       "  ['10', '14', '13', '14', '13', '12', '11'],\n",
-       "  ['10', '14', '13', '14', '13', '12'],\n",
-       "  ['10', '14', '13', '14', '13'],\n",
-       "  ['10', '14']],\n",
-       " [['11', '5', '0'],\n",
-       "  ['11', '6', '3', '2', '1'],\n",
-       "  ['11', '6', '3', '2'],\n",
-       "  ['11', '6', '3'],\n",
-       "  ['11', '6', '3', '4'],\n",
-       "  ['11', '5'],\n",
-       "  ['11', '6'],\n",
-       "  ['11', '6', '3', '4', '7'],\n",
-       "  ['11', '12', '13', '9', '13', '9', '8'],\n",
-       "  ['11', '12', '13', '9', '13', '9'],\n",
-       "  ['11', '12', '13', '14', '13', '14', '10'],\n",
-       "  ['11'],\n",
-       "  ['11', '12'],\n",
-       "  ['11', '12', '13'],\n",
-       "  ['11', '14']],\n",
-       " [['12', '14', '13', '14', '13', '14', '13', '12', '11', '5', '0'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '13', '12', '11', '6', '3', '2', '1'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '13', '12', '11', '6', '3', '2'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '13', '12', '11', '6', '3'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '13', '12', '11', '6', '3', '4'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '13', '12', '11', '5'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '13', '12', '11', '6'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '13', '12', '11', '6', '3', '4', '7'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '9', '13', '9', '13', '9', '8'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '9', '13', '9', '13'],\n",
-       "  ['12', '14', '10'],\n",
-       "  ['12', '14', '13', '14', '13', '14', '13', '12', '11'],\n",
-       "  ['12'],\n",
-       "  ['12', '14', '13', '14', '13', '14'],\n",
-       "  ['12', '14']],\n",
-       " [['13', '12', '11', '5', '0'],\n",
-       "  ['13', '12', '11', '6', '3', '2', '1'],\n",
-       "  ['13', '12', '11', '6', '3', '2'],\n",
-       "  ['13', '12', '11', '6', '3'],\n",
-       "  ['13', '12', '11', '6', '3', '4', '3', '4'],\n",
-       "  ['13', '12', '11', '5'],\n",
-       "  ['13', '12', '11', '6'],\n",
-       "  ['13', '12', '11', '6', '3', '4', '3', '4', '7'],\n",
-       "  ['13', '9', '13', '9', '8'],\n",
-       "  ['13', '9', '13', '9'],\n",
-       "  ['13', '14', '13', '14', '10'],\n",
-       "  ['13', '12', '11'],\n",
-       "  ['13', '12'],\n",
-       "  ['13'],\n",
-       "  ['13', '14', '13', '14']],\n",
-       " [['14', '13', '14', '13', '14', '13', '12', '11', '5', '0'],\n",
-       "  ['14', '13', '14', '13', '14', '13', '12', '11', '6', '3', '2', '1'],\n",
-       "  ['14', '13', '14', '13', '14', '13', '12', '11', '6', '3', '2'],\n",
-       "  ['14', '13', '14', '13', '14', '13', '12', '11', '6', '3'],\n",
-       "  ['14', '13', '14', '13', '14', '13', '12', '11', '6', '3', '4'],\n",
-       "  ['14', '13', '14', '13', '14', '13', '12', '11', '5'],\n",
-       "  ['14', '13', '14', '13', '14', '13', '12', '11', '6'],\n",
-       "  ['14', '13', '14', '13', '14', '13', '12', '11', '6', '3', '4', '7'],\n",
-       "  ['14', '13', '14', '13', '14', '9', '13', '9', '13', '9', '8'],\n",
-       "  ['14', '13', '14', '13', '14', '9', '13', '9', '13'],\n",
-       "  ['14', '10'],\n",
-       "  ['14', '13', '14', '13', '14', '13', '12', '11'],\n",
-       "  ['14', '13', '14', '13', '14', '13', '12'],\n",
-       "  ['14', '13', '14', '13', '14'],\n",
-       "  ['14']]]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'liste_itineraire' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_35908/3734191629.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mliste_itineraire\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'liste_itineraire' is not defined"
+     ]
     }
    ],
    "source": [
-    "matrix[0]"
+    "liste_itineraire[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
